Added exp content box

--- a/index.html
+++ b/index.html
@@ -44,19 +44,33 @@
             <p class="hero-name">Johnny Chiu</p>
             <p class="hero-role">Software Development Engineer</p>
             <div class="logos">
-              <a href="#" class="sm-link">
+              <a
+                href="https://www.linkedin.com/in/johnny-chiu-599945148/"
+                class="sm-link"
+                target="_blank"
+              >
                 <ion-icon name="logo-linkedin" class="logo-icon"></ion-icon>
               </a>
-              <a href="#" class="sm-link">
+              <a
+                href="https://github.com/KappaJohns"
+                class="sm-link"
+                target="_blank"
+              >
                 <ion-icon name="logo-github" class="logo-icon"></ion-icon>
               </a>
-              <a href="#" class="sm-link">
+              <a
+                href="https://www.instagram.com/john.ister/"
+                class="sm-link"
+                target="_blank"
+              >
                 <ion-icon name="logo-instagram" class="logo-icon"></ion-icon>
               </a>
             </div>
             <div class="hero-btn">
               <button class="contact-me">Contact me</button>
-              <a href="#" class="learn-more">Learn More &darr;</a>
+              <!-- <a href="#edu" class="learn-more learn-more--hero"
+                >Learn More &darr;</a
+              > -->
             </div>
           </div>
 
@@ -75,17 +89,15 @@
         </div>
         <div class="container">
           <div class="education-card">
-            <div class="education-card-imgbox">
+            <div class="card-imgbox">
               <img
                 src="logos/umd-logo.png"
                 alt="Picture of University of Maryland logo"
                 class="logo-umd"
               />
             </div>
-            <div class="education-card-textbox">
-              <h3 class="education-card-title">
-                University of Maryland, College Park
-              </h3>
+            <div class="card-textbox">
+              <h3 class="card-title">University of Maryland, College Park</h3>
 
               <ul class="education-card-list">
                 <li class="education-card-list-item">
@@ -130,7 +142,7 @@
 
           <div class="container container-carousel">
             <div class="carousel-exp">
-              <div class="exp-item">
+              <div class="exp-item amzn">
                 <div class="exp-img">
                   <img
                     src="logos/amazon-logo.png"
@@ -147,7 +159,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="exp-item">
+              <div class="exp-item feva">
                 <div class="exp-img">
                   <img
                     src="logos/umd-long-logo.png"
@@ -164,12 +176,12 @@
                   </ul>
                 </div>
               </div>
-              <div class="exp-item">
+              <div class="exp-item edlyft">
                 <div class="exp-img">
                   <img
                     src="logos/edlyft-logo.png"
                     alt="Picture of Edlyft logo"
-                    class="exp-img-umd"
+                    class="exp-img-edlyft"
                   />
                 </div>
                 <div class="exp-content">
@@ -181,7 +193,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="exp-item">
+              <div class="exp-item tt">
                 <div class="exp-img">
                   <img
                     src="logos/tt-logo.png"
@@ -194,11 +206,11 @@
 
                   <ul class="exp-list">
                     <li><span>Terrapin Tech (UMD)</span></li>
-                    <li><span>May 2021 - Aug 2021</span></li>
+                    <li><span>Jun 2021 - Jun 2022</span></li>
                   </ul>
                 </div>
               </div>
-              <div class="exp-item">
+              <div class="exp-item rec1">
                 <div class="exp-img">
                   <img
                     src="logos/recwell-logo.png"
@@ -215,7 +227,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="exp-item">
+              <div class="exp-item rec2">
                 <div class="exp-img">
                   <img
                     src="logos/recwell-logo.png"
@@ -243,15 +255,269 @@
               ></ion-icon>
             </button>
           </div>
+
           <div class="cover--right"></div>
+        </div>
+        <div class="content-box">
+          <div class="content-amzn exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/amazon-logo.png"
+                alt="Picture of Amazon logo"
+                class="exp-img-amazon"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">Software Dev Engineer</span>
+              <span class="exp-time">Jul 2022 - Jan 2023</span>
+              <ul class="exp-content-text">
+                <li>
+                  Develop Alexa skill cards using AWS CDK pipelines and Alexa
+                  Skills Kit(ASK) with Java and Typescript and building
+                  alarms/monitors in AWS to monitor service
+                </li>
+                <li>
+                  Use AWS API to build pipelines for building and deployment to
+                  AWS Lambda
+                </li>
+                <li>
+                  Follow agile methodologies in planning, creating, and
+                  progressing daily tasks
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-feva exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/umd-long-logo.png"
+                alt="Picture of UMD logo"
+                class="exp-img-umd"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">Web Development Intern</span>
+              <span class="exp-time">May 2021 - Aug 2021</span>
+              <ul class="exp-content-text">
+                <li>Project: Fast Event Video Annotation (FEVA)</li>
+                <li>
+                  Goal: Develop a platform for video editors to label and edit
+                  their videos continuously
+                </li>
+                <li>
+                  Implement and debug feature requests for video editing
+                  software in front end web development using Flask and
+                  Javascript
+                </li>
+                <li>
+                  Build a context menu on right click for copy, paste, and
+                  cutting video components
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-edlyft exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/edlyft-logo.png"
+                alt="Picture of Edlyft logo"
+                class="exp-img-edlyft"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">Computer Science Mentor</span>
+              <span class="exp-time">Jun 2021 - Dec 2021</span>
+              <ul class="exp-content-text">
+                <li>
+                  Lead a cohort of students learning beginner CS courses in UMD
+                </li>
+                <li>
+                  Host office hours to assist students in assignments and
+                  projects
+                </li>
+                <li>Plan, structure, and teach programming concepts in Java</li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-tt exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/tt-logo.png"
+                alt="Picture of Terrapin Tech logo"
+                class="exp-img-tt"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">Assistant Lead</span>
+              <span class="exp-time">Jun 2021 - Jun 2022</span>
+              <ul class="exp-content-text">
+                <li>Diagnose and repair Dell and Apple computers</li>
+                <li>Process store deliveries and managing stock inventory</li>
+                <li>
+                  Assist with technical questions regarding computers or
+                  software diagnostics
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-rec1 exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/recwell-logo.png"
+                alt="Picture of Recwell logo"
+                class="exp-img-rec"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">Personal Trainer</span>
+              <span class="exp-time">Jan 2021 - June 2022</span>
+              <ul class="exp-content-text">
+                <li>
+                  Design and tailor physical training programs for clients
+                </li>
+                <li>
+                  Perform tests on clients to determine physical abilities
+                </li>
+                <li>Guide and teach clients workout techniques and concepts</li>
+                <li>Plan and build short and long term goals with clients</li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-rec2 exp-box hideup">
+            <div class="exp-card-imgbox">
+              <img
+                src="logos/recwell-logo.png"
+                alt="Picture of Recwell logo"
+                class="exp-img-rec"
+              />
+            </div>
+            <div class="exp-textbox">
+              <span class="exp-title--box">WF Supervisor/Staff</span>
+              <span class="exp-time">Jan 2019 - June 2022</span>
+              <ul class="exp-content-text">
+                <li>
+                  Be the first responder to emergency situations within the
+                  facility
+                </li>
+                <li>
+                  Oversee the daily operation of over 2000 patrons in weight
+                  room areas
+                </li>
+                <li>Ensure patron safety and enforce facility policies</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section-projects" id="proj">
         <div class="container">
           <span class="subheader">Projects</span>
         </div>
-        <div class="container grid grid--2-cols"></div>
+        <div
+          class="container container--proj grid grid--2-cols margin-top-title"
+        >
+          <div class="proj-card">
+            <div>
+              <p class="proj-heading">BitTorrent Client</p>
+              <ul class="proj-feat">
+                <li class="lang--c">C</li>
+              </ul>
+            </div>
+            <div>
+              <p class="proj-text">
+                Create a torrent client that connects with peers using TCP
+                connection protocols. Used SHA1 hashing library and bencode
+                library to parse .torrent metafile and used TCP networking
+                protocols to build, send and receive packages to peers after
+                getting routing information from metafile.
+              </p>
+
+              <a
+                href="https://github.com/KappaJohns/bittorrent-client"
+                class="learn-more learn-more--proj"
+                target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+          <div class="proj-card">
+            <div>
+              <p class="proj-heading">Panorama Stitching</p>
+              <ul class="proj-feat">
+                <li class="lang--python">Python</li>
+                <li class="fw--np">Numpy</li>
+                <li class="fw--opencv">OpenCV</li>
+              </ul>
+            </div>
+            <div>
+              <p class="proj-text">
+                Stitch fragmented images together to form a panorama with AMNS
+                and RANSAC technique into a panorama. Used Scale-Invariant
+                feature transformation in OpenCV/NumPy libraries to recognize
+                feature points for stitching.
+              </p>
+              <a href="#" class="learn-more learn-more--proj" target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+          <div class="proj-card">
+            <div>
+              <p class="proj-heading">SmallC Parser & Evaluator</p>
+              <ul class="proj-feat">
+                <li class="lang--ocaml">Ocaml</li>
+                <li class="lang--c">C</li>
+              </ul>
+            </div>
+            <div>
+              <p class="proj-text">
+                Evaluate and execute programs implemented in C with functional
+                programming language Ocaml. Parse commands with regex into
+                tokens and translate them into an AST to query for execution.
+              </p>
+            </div>
+          </div>
+          <div class="proj-card">
+            <div>
+              <p class="proj-heading">Portfolio Website</p>
+              <ul class="proj-feat">
+                <li class="lang--html">HTML</li>
+                <li class="lang--css">CSS</li>
+                <li class="lang--js">Javascript</li>
+              </ul>
+            </div>
+            <div>
+              <p class="proj-text">
+                Using HTML/CSS and Javascript, I created this website you see
+                here as my portfolio. This portfolio showcases the significant
+                projects I've done so far and my background as a software
+                engineer.
+              </p>
+
+              <a
+                href="https://github.com/KappaJohns/my_portfolio"
+                class="learn-more learn-more--proj"
+                target="_blank"
+                >Learn More</a
+              >
+            </div>
+          </div>
+        </div>
       </section>
+      <div class="contact-box">
+        <form></form>
+      </div>
     </main>
+    <section class="contact-box">
+      <form name="contact-form">
+        <div class="form-name"></div>
+        <div class="form-email"></div>
+        <div class="form-msg"></div>
+        <div class="form-submit">
+          <input type="submit" value="Send" />
+        </div>
+      </form>
+    </section>
+    <footer></footer>
   </body>
 </html>
