--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </ul>
       </nav>
     </header>
+
     <main class="main">
       <section class="section-hero">
         <div class="hero">
@@ -504,20 +505,56 @@
           </div>
         </div>
       </section>
-      <div class="contact-box">
-        <form></form>
-      </div>
     </main>
-    <section class="contact-box">
-      <form name="contact-form">
-        <div class="form-name"></div>
-        <div class="form-email"></div>
-        <div class="form-msg"></div>
-        <div class="form-submit">
-          <input type="submit" value="Send" />
+
+    <section class="contact-box hidden">
+      <div class="contact-box--background">
+        <div class="contact-background"></div>
+        <div class="contact-content">
+          <span class="contact-title">Contact Me</span>
+
+          <form name="contact-form" method="POST">
+            <div class="form-name">
+              <label for="name">Name:</label>
+              <input
+                type="text"
+                name="name"
+                class="name"
+                placeholder="John Smith"
+                required
+              />
+            </div>
+            <div class="form-email">
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                name="email"
+                class="email"
+                placeholder="example@gmail.com"
+                required
+              />
+            </div>
+            <div class="form-msg">
+              <label for="msg">Message:</label>
+              <textarea
+                name="msg"
+                rows="10"
+                class="msg-box"
+                placeholder="What's on your mind?"
+              ></textarea>
+            </div>
+            <div class="form-submit">
+              <input type="submit" value="Send" />
+            </div>
+          </form>
+
+          <button class="contact-close">
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
         </div>
-      </form>
+      </div>
     </section>
+
     <footer></footer>
   </body>
 </html>
