prettier config, init js file, css transitions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li><a href="#edu" class="main-nav-link">Education</a></li>
           <li><a href="#exp" class="main-nav-link">Experience</a></li>
           <li><a href="#proj" class="main-nav-link">Projects</a></li>
-          <li><a href="#" class="main-nav-link">Contact</a></li>
+          <li><a href="#footer" class="main-nav-link">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -69,9 +69,6 @@
             </div>
             <div class="hero-btn">
               <button class="contact-me">Contact me</button>
-              <!-- <a href="#edu" class="learn-more learn-more--hero"
-                >Learn More &darr;</a
-              > -->
             </div>
           </div>
 
@@ -556,5 +553,7 @@
     </section>
 
     <footer></footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
