exp-box changes

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
           <div class="cover--right"></div>
         </div>
-        <div class="content-box">
+        <div>
           <div class="content-amzn exp-box hideup">
             <div class="exp-card-imgbox">
               <img
