squash image and add form support for netlify

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <div class="contact-content">
           <span class="contact-title">Contact Me</span>
 
-          <form name="contact-form" method="POST" id="contact">
+          <form name="contact-form" method="POST" id="contact" netlify>
             <div class="form-name">
               <label for="name">Name:</label>
               <input
