query file and increase accessibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Johnny Chiu's personal portfolio to showcase his education and experience bnackground as a software engineer."
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,6 +53,7 @@
               <a
                 href="https://www.linkedin.com/in/johnny-chiu-599945148/"
                 class="sm-link"
+                aria-label="LinkedIn"
                 target="_blank"
               >
                 <ion-icon name="logo-linkedin" class="logo-icon"></ion-icon>
@@ -56,6 +61,7 @@
               <a
                 href="https://github.com/KappaJohns"
                 class="sm-link"
+                aria-label="Github"
                 target="_blank"
               >
                 <ion-icon name="logo-github" class="logo-icon"></ion-icon>
@@ -63,6 +69,7 @@
               <a
                 href="https://www.instagram.com/john.ister/"
                 class="sm-link"
+                aria-label="Instagram"
                 target="_blank"
               >
                 <ion-icon name="logo-instagram" class="logo-icon"></ion-icon>
@@ -242,10 +249,16 @@
                 </ul>
               </div>
             </div>
-            <button class="btn btn--left">
+            <button
+              class="btn btn--left"
+              aria-label="Move experience items left"
+            >
               <ion-icon name="chevron-back-outline" class="btn-icon"></ion-icon>
             </button>
-            <button class="btn btn--right">
+            <button
+              class="btn btn--right"
+              aria-label="Move experience items right"
+            >
               <ion-icon
                 name="chevron-forward-outline"
                 class="btn-icon"
@@ -433,7 +446,7 @@
                 href="https://github.com/KappaJohns/bittorrent-client"
                 class="learn-more learn-more--proj"
                 target="_blank"
-                >Learn More</a
+                >Repo</a
               >
             </div>
           </div>
@@ -454,7 +467,7 @@
                 feature points for stitching.
               </p>
               <a href="#" class="learn-more learn-more--proj" target="_blank"
-                >Learn More</a
+                >Repo</a
               >
             </div>
           </div>
@@ -495,7 +508,7 @@
                 href="https://github.com/KappaJohns/my_portfolio"
                 class="learn-more learn-more--proj"
                 target="_blank"
-                >Learn More</a
+                >Repo</a
               >
             </div>
           </div>
@@ -543,7 +556,7 @@
             </div>
           </form>
 
-          <button class="contact-close">
+          <button class="contact-close" aria-label="Close contact form">
             <ion-icon name="close-outline"></ion-icon>
           </button>
         </div>
