fix panorma repo link

--- a/index.html
+++ b/index.html
@@ -466,7 +466,10 @@
                 feature transformation in OpenCV/NumPy libraries to recognize
                 feature points for stitching.
               </p>
-              <a href="#" class="learn-more learn-more--proj" target="_blank"
+              <a
+                href="https://github.com/KappaJohns/panorama_stitching"
+                class="learn-more learn-more--proj"
+                target="_blank"
                 >Repo</a
               >
             </div>
